<resources>
    <string name="app_name">Daxaab</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up2">Sign Up</string>
    <string name="sign_upp">SIGN UP</string>
    <string name="login1">Login</string>
    <string name="loginbtn">LOGIN</string>
    <string name="welcome">Welcome</string>
    <string name="image">Image</string>
    <string name="todo">TODO</string>
    <string name="logout">logout</string>
    <string name="scan">scan</string>
    <string name="welcome_2">Welcome!</string>
    <string name="uploadBtn" />
    <string name="todod" />
    <string name="upload_kar">Upload</string>
    <string name="Browse" />
    <string name="browse">Browse</string>
    <string name="show_all">Show All</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="title_activity_other">Other</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sugar">SugarActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>